// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups should get a group by id 1`] = `
Object {
  "id": 1,
  "name": "franks beer group",
}
`;

exports[`Groups should get a group by id 2`] = `
Array [
  Array [
    "Groups/1?loadAttributes=expanded&%24expand=Members",
    Object {},
    Object {},
  ],
]
`;

exports[`Groups should get all groups 1`] = `
Array [
  Object {
    "id": 1,
    "name": "franks beer group",
  },
]
`;

exports[`Groups should get all groups 2`] = `
Array [
  Array [
    "Groups?loadAttributes=expanded&%24filter=IsActive%20eq%20true%20and%20IsArchived%20eq%20false&%24expand=Members",
    Object {},
    Object {},
  ],
]
`;

exports[`Groups should get group members 1`] = `
Array [
  Object {
    "firstName": "Frank",
    "id": 1,
  },
  Object {
    "firstName": "Frank",
    "id": 1,
  },
]
`;

exports[`Groups should get group members 2`] = `
Array [
  Array [
    "GroupMembers?loadAttributes=expanded&%24filter=GroupId%20eq%201",
    Object {},
    Object {},
  ],
]
`;
